--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
               We work quickly, carefully and with style.
             </p>
           </div>
+          <ul class="slider-pagination list">
+            <li class="slider-pagination-item active"></li>
+            <li class="slider-pagination-item"></li>
+            <li class="slider-pagination-item"></li>
+          </ul>
           <ul class="list down-group">
             <li class="list-item-back">
               <img class="slide-two" src="./image/slider/slider3.jpg" alt="" />
