--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
           </ul>
           <ul class="list down-group">
             <li class="list-item-back">
-              <img class="slide-two" src="./image/slider/slider3.jpg" alt="" />
+              <img class="slide-two" src="./images/slider/slider3.jpg" alt="" />
               <button class="btn-slider back" type="button">Back</button>
             </li>
             <li class="list-item-forvard">
-              <img class="slide-one" src="./image/slider/slider2.jpg" alt="" />
+              <img class="slide-one" src="./images/slider/slider2.jpg" alt="" />
               <button class="btn-slider forward" type="button">Forward</button>
             </li>
           </ul>
         </div>
         <a class="" href="index.html">
           <svg class="logo">
-            <use href="./image/icons.svg#icon-logo"></use>
+            <use href="./images/icons.svg#icon-logo"></use>
           </svg>
         </a>
         <header class="header">
@@ -89,8 +89,8 @@
       <div class="container cont-ab">
         <div class="about-photo">
           <ul class="list about">
-            <li class="list-item"><img src="./image/about/about1.jpg" alt="Front shave" /></li>
-            <li class="list-item"><img src="./image/about/about2.jpg" alt="Back shave" /></li>
+            <li class="list-item"><img src="./images/about/about1.jpg" alt="Front shave" /></li>
+            <li class="list-item"><img src="./images/about/about2.jpg" alt="Back shave" /></li>
           </ul>
         </div>
         <div class="info-block">
@@ -213,7 +213,7 @@
 
         <ul class="list">
           <li class="barber-card">
-            <img src="./image/barbers/john.jpg" alt="John Smith" class="img" />
+            <img src="./images/barbers/john.jpg" alt="John Smith" class="img" />
             <div class="card-title">
               <h3 class="barber-name">John Smith</h3>
               <p class="prof">Extreme Barber</p>
@@ -223,28 +223,28 @@
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -252,7 +252,7 @@
           </li>
 
           <li class="barber-card">
-            <img src="./image/barbers/michele.jpg" alt="Michele Doe" class="img" />
+            <img src="./images/barbers/michele.jpg" alt="Michele Doe" class="img" />
             <div class="card-title">
               <h3 class="barber-name">Michele Doe</h3>
               <p class="prof">Extreme Barber</p>
@@ -262,28 +262,28 @@
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -291,7 +291,7 @@
           </li>
 
           <li class="barber-card">
-            <img src="./image/barbers/alan.jpg" alt="Alan Black" class="img" />
+            <img src="./images/barbers/alan.jpg" alt="Alan Black" class="img" />
             <div class="card-title">
               <h3 class="barber-name">Alan Black</h3>
               <p class="prof">Extreme Barber</p>
@@ -301,28 +301,28 @@
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="socials-item">
                 <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                   <svg class="icon">
-                    <use href="./image/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -339,16 +339,16 @@
         <h2 class="gallery-title">Gallery</h2>
         <ul class="list gallery">
           <li class="list-item">
-            <img src="./image/gallery/gallery1.jpg" alt="haircut" class="img" />
+            <img src="./images/gallery/gallery1.jpg" alt="haircut" class="img" />
           </li>
           <li class="list-item">
-            <img src="./image/gallery/gallery2.jpg" alt="shaving" class="img" />
+            <img src="./images/gallery/gallery2.jpg" alt="shaving" class="img" />
           </li>
           <li class="list-item">
-            <img src="./image/gallery/gallery3.jpg" alt="compress" class="img" />
+            <img src="./images/gallery/gallery3.jpg" alt="compress" class="img" />
           </li>
           <li class="list-item">
-            <img src="./image/gallery/gallery4.jpg" alt="edging" class="img" />
+            <img src="./images/gallery/gallery4.jpg" alt="edging" class="img" />
           </li>
         </ul>
       </div>
@@ -392,7 +392,7 @@
                     target="_blank"
                     rel="noopener noreferrer">
                     <svg class="icon-contacts">
-                      <use href="./image/icons.svg#icon-map-pin"></use>
+                      <use href="./images/icons.svg#icon-map-pin"></use>
                     </svg>
                     st. Vasilkovaya,<br />7A Kiev, 08132
                   </a>
@@ -400,7 +400,7 @@
                 <li class="contact-list-item">
                   <a class="contact" href="barbershop@email.com">
                     <svg class="icon-contacts">
-                      <use href="./image/icons.svg#icon-mail-footer"></use>
+                      <use href="./images/icons.svg#icon-mail-footer"></use>
                     </svg>
                     barbershop@email.com
                   </a>
@@ -408,7 +408,7 @@
                 <li class="contact-list-item">
                   <a class="contact" href="tel:+380961111111">
                     <svg class="icon-contacts">
-                      <use href="./image/icons.svg#icon-phone-footer"></use>
+                      <use href="./images/icons.svg#icon-phone-footer"></use>
                     </svg>
                     +38 096 111 11 11
                   </a>
@@ -444,7 +444,7 @@
       <div class="modal">
         <button class="close" data-modal-close>
           <svg class="icon-close">
-            <use href="./image/icons.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="form-name">Leave your details, we will call you back</p>
@@ -453,21 +453,21 @@
             <label class="label" for="username">Name</label>
             <input type="text" class="input-modal" name="username" id="username" />
             <svg class="icon-form">
-              <use href="./image/icons.svg#icon-person"></use>
+              <use href="./images/icons.svg#icon-person"></use>
             </svg>
           </div>
           <div class="form-field-modal">
             <label class="label" for="tel">Phone</label>
             <input type="tel" class="input-modal" name="tel" id="tel" />
             <svg class="icon-form">
-              <use href="./image/icons.svg#icon-phone"></use>
+              <use href="./images/icons.svg#icon-phone"></use>
             </svg>
           </div>
           <div class="form-field-modal">
             <label class="label" for="email">Mail</label>
             <input type="email" class="input-modal" name="email" id="email" />
             <svg class="icon-form">
-              <use href="./image/icons.svg#icon-email"></use>
+              <use href="./images/icons.svg#icon-email"></use>
             </svg>
           </div>
           <div class="form-field-modal">
@@ -485,7 +485,7 @@
               <a class="agreement accept" href="">Terms of the contract</a>
               <input type="checkbox" class="contract" name="agreement" id="agreement" />
               <svg class="icon-check">
-                <use href="./image/icons.svg#icon-check"></use>
+                <use href="./images/icons.svg#icon-check"></use>
               </svg>
               <span class="check-empty"></span>
             </label>
