--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section>
       <div class="container hero">
-        <div class="bg-img">
+        <div class="hero-bg">
           <div class="hero-content">
             <p class="uppertitle-dark">A hair salon for men in Kyiv</p>
             <h1 class="hero-title">BarberShop</h1>
@@ -37,14 +37,14 @@
             <li class="slider-pagination-item"></li>
             <li class="slider-pagination-item"></li>
           </ul>
-          <ul class="list down-group">
-            <li class="list-item-back">
+          <ul class="list slider-buttons">
+            <li class="slider-button__back">
               <img class="slide-two" src="./images/slider/slider3.jpg" alt="" />
-              <button class="btn-slider back" type="button">Back</button>
+              <button class="slider-button slider-button__back" type="button">Back</button>
             </li>
-            <li class="list-item-forvard">
+            <li class="slider-button__forward">
               <img class="slide-one" src="./images/slider/slider2.jpg" alt="" />
-              <button class="btn-slider forward" type="button">Forward</button>
+              <button class="slider-button slider-button__forward" type="button">Forward</button>
             </li>
           </ul>
         </div>
@@ -55,26 +55,26 @@
         </a>
         <header class="header">
           <nav class="">
-            <ul class="nav">
-              <li class="list-item"><a class="header-link" href="#about">About</a></li>
-              <li class="list-item">
+            <ul class="header-nav">
+              <li class="header-nav__item"><a class="header-link" href="#about">About</a></li>
+              <li class="header-nav__item">
                 <a class="header-link" href="#services">Services and prices</a>
               </li>
-              <li class="list-item"><a class="header-link" href="#barbers">Barbers</a></li>
-              <li class="list-item"><a class="header-link" href="#contacts">Contacts</a></li>
+              <li class="header-nav__item"><a class="header-link" href="#barbers">Barbers</a></li>
+              <li class="header-nav__item"><a class="header-link" href="#contacts">Contacts</a></li>
             </ul>
           </nav>
           <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
           <button class="btn-light head" type="button" data-modal-open>ONLINE-BOOKING</button>
         </header>
-        <div class="left-group">
-          <ul class="link-list left">
-            <li class="list-item">
+        <div class="media">
+          <ul class="media-links list">
+            <li class="media-links__item">
               <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
                 >Instagram</a
               >
             </li>
-            <li class="list-item">
+            <li class="media-links__item">
               <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
                 >Youtube</a
               >
