--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <li class="list-item"><img src="./images/about/about1.jpg" alt="Front shave" /></li>
           <li class="list-item"><img src="./images/about/about2.jpg" alt="Back shave" /></li>
         </ul>
-        <div class="about-main">
+        <div class="about-description">
           <p class="uppertitle">ABOUT</p>
           <h2 class="title-dark">Best Barbershop in your city</h2>
           <p class="subtitle">
@@ -154,42 +154,42 @@
     <!-- Benefits -->
     <section class="section">
       <div class="container benefits">
-        <div class="infograf">
-          <ul class="list number">
-            <li class="benefit">
+        <div class="benefits-cards">
+          <ul class="list benefits-list">
+            <li class="benefits-list__item">
               <p>
-                <span class="benefits-number"
-                  >600<sup><span class="sup">&#43;</span></sup></span
-                ><br /><span class="benefits-item">Satisfied customers per day</span>
+                <span class="benefits-list__number"
+                  >600<sup><span class="benefits-list__sub">&#43;</span></sup></span
+                ><br /><span class="benefits-list__text">Satisfied customers per day</span>
               </p>
             </li>
 
-            <li class="benefit">
+            <li class="benefits-list__item">
               <p>
-                <span class="benefits-number"
-                  >50<sup><span class="sup">&#43;</span></sup></span
-                ><br /><span class="benefits-item">Awards for excellent service</span>
+                <span class="benefits-list__number"
+                  >50<sup><span class="benefits-list__sub">&#43;</span></sup></span
+                ><br /><span class="benefits-list__text">Awards for excellent service</span>
               </p>
             </li>
 
-            <li class="benefit">
+            <li class="benefits-list__item">
               <p>
-                <span class="benefits-number"
-                  >20<sup><span class="sup">&#43;</span></sup></span
-                ><br /><span class="benefits-item">Kyiv’s best barbers</span>
+                <span class="benefits-list__number"
+                  >20<sup><span class="benefits-list__sub">&#43;</span></sup></span
+                ><br /><span class="benefits-list__text">Kyiv’s best barbers</span>
               </p>
             </li>
 
-            <li class="benefit">
+            <li class="benefits-list__item">
               <p>
-                <span class="benefits-number"
-                  >100<sup><span class="sup">&#43;</span></sup></span
-                ><br /><span class="benefits-item">Gifts for regular customers</span>
+                <span class="benefits-list__number"
+                  >100<sup><span class="benefits-list__sub">&#43;</span></sup></span
+                ><br /><span class="benefits-list__text">Gifts for regular customers</span>
               </p>
             </li>
           </ul>
         </div>
-        <div class="old-school">
+        <div class="benefits-description">
           <p class="uppertitle">old traditional school</p>
           <h2 class="title-dark">
             Why people come <br />
@@ -204,44 +204,44 @@
     </section>
 
     <!-- Our barbers -->
-    <section class="our-barbers section" id="barbers">
+    <section class="team section" id="barbers">
       <div class="container">
         <p class="uppertitle">for true enjoyers of the atmosphere</p>
         <h2 class="title-dark">Our barbers</h2>
 
-        <ul class="list">
-          <li class="barber-card">
+        <ul class="team-list list">
+          <li class="team-card">
             <img src="./images/barbers/john.jpg" alt="John Smith" class="img" />
-            <div class="card-title">
-              <h3 class="barber-name">John Smith</h3>
-              <p class="prof">Extreme Barber</p>
+            <div class="team-card__title">
+              <h3 class="team-card__name">John Smith</h3>
+              <p class="team-card__text">Extreme Barber</p>
             </div>
 
             <ul class="socials">
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -249,38 +249,38 @@
             </ul>
           </li>
 
-          <li class="barber-card">
+          <li class="team-card">
             <img src="./images/barbers/michele.jpg" alt="Michele Doe" class="img" />
-            <div class="card-title">
-              <h3 class="barber-name">Michele Doe</h3>
-              <p class="prof">Extreme Barber</p>
+            <div class="team-card__title">
+              <h3 class="team-card__name">Michele Doe</h3>
+              <p class="team-card__text">Extreme Barber</p>
             </div>
 
             <ul class="socials">
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -288,38 +288,38 @@
             </ul>
           </li>
 
-          <li class="barber-card">
+          <li class="team-card">
             <img src="./images/barbers/alan.jpg" alt="Alan Black" class="img" />
-            <div class="card-title">
-              <h3 class="barber-name">Alan Black</h3>
-              <p class="prof">Extreme Barber</p>
+            <div class="team-card__title">
+              <h3 class="team-card__name">Alan Black</h3>
+              <p class="team-card__text">Extreme Barber</p>
             </div>
 
             <ul class="socials">
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                  <svg class="icon">
+              <li class="socials__item">
+                <a class="socials__link" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="socials__icon">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -334,18 +334,18 @@
     <section class="section">
       <div class="container">
         <p class="uppertitle">in Latin, "barba" means "beard"</p>
-        <h2 class="gallery-title">Gallery</h2>
-        <ul class="list gallery">
-          <li class="list-item">
+        <h2 class="tittle-dark hidden">Gallery</h2>
+        <ul class="list gallery-list">
+          <li class="gallery-list__item">
             <img src="./images/gallery/gallery1.jpg" alt="haircut" class="img" />
           </li>
-          <li class="list-item">
+          <li class="gallery-list__item">
             <img src="./images/gallery/gallery2.jpg" alt="shaving" class="img" />
           </li>
-          <li class="list-item">
+          <li class="gallery-list__item">
             <img src="./images/gallery/gallery3.jpg" alt="compress" class="img" />
           </li>
-          <li class="list-item">
+          <li class="gallery-list__item">
             <img src="./images/gallery/gallery4.jpg" alt="edging" class="img" />
           </li>
         </ul>
